--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -1,7 +1,8 @@
-extends ..\template
+extends ../template
 
 block vars
    - title = 'Portfolio'
    - page = 'home'
 
 block content
+   button Click me
