--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,3 @@
-h1 {
-   font-family: Arial;
-   font-size: 3rem;
-   color: blue;
-}
+@forward './settings/index';
+@forward './components/index';
+@forward './includes/index';
